css fixes - looks like FF doesn't fully support HTML5 elements...

--- a/style.less
+++ b/style.less
@@ -14,7 +14,7 @@ body {
   margin: 30px 0px 20px;
 }
 
-header {
+#header {
   overflow: hidden;
   margin: 0px auto 25px;
   width: @body_width;
@@ -188,9 +188,4 @@ footer {
 
 img {
   border: 0;
-}
-
-.clear {
-  height: 0;
-  clear: both;
 }
